--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,17 @@
-{}
+{
+  "name": "우리가 되는 방법들",
+  "short_name": "우리가 되는 방법들 WAYS TO MAKE US",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#fff",
+  "theme_color": "#fff",
+  "description": "「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다.",
+  "icons": [
+    {
+      "src": "/favicon.svg",
+      "sizes": "512x512",
+      "type": "image/svg",
+      "purpose": "maskable"
+    }
+  ]
+}
