--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#fff",
-  "theme_color": "#fff",
+  "theme_color": "#000",
   "description": "「우리가 되는 방법들」 워크숍 기록집 웹뷰어 페이지입니다.",
   "icons": [
     {
